Address typo's
