# docs/swagger.json
@@ -48,7 +48,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.L3afBPFPrograms"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.L3afBPFPrograms"
+                            }
                         }
                     }
                 ],
